# pivot-ai-handball

./: .gitignore  CLAUDE.md  PROMPT_CLAUDE_CODE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: correspondances_example.json
legacy/: README.md  pipeline_colab.py
notebooks/: colab_pivot_ai.ipynb  train_handball_yolo.ipynb
pivot_ai/: __init__.py  cli.py  config.py  decoupage.py  detection.py  equipes.py  homographie.py  metriques.py  pipeline.py  radar.py  stats.py  tracking.py
pivot_ai/trackers/: botsort_reid.yaml
scripts/: build_notebook.py  build_train_notebook.py  setup_local.sh
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_decoupage.py  test_detection_remap.py  test_homographie.py  test_metriques.py  test_notebook.py  test_pipeline.py  test_stats.py  test_tracker_botsort.py  test_tracking.py
