[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pivot-ai-handball"
version = "0.1.0"
description = "Pipeline computer vision pour scouting handball - detection, tracking, stats, decoupage automatique en actions."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Tristan" }]
keywords = ["handball", "computer-vision", "tracking", "scouting", "sports-analytics"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Recognition",
]

dependencies = [
    "ultralytics>=8.3.0",
    "supervision>=0.25.1",
    "opencv-python-headless>=4.10.0",
    "numpy>=1.26.0,<2.0.0",
    "scikit-learn>=1.5.0",
    "pandas>=2.2.0",
    "polars>=1.0.0",
    "scipy>=1.13.0",
    "plotly>=5.20.0",
    "matplotlib>=3.8.0",
    "tqdm>=4.66.0",
    "pydantic>=2.7.0",
    "tomli>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
]
colab = [
    "google-colab",
]

[project.scripts]
pivot-ai = "pivot_ai.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pivot_ai*"]
exclude = ["tests*", "notebooks*", "legacy*", "data*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501", "N803", "N806"]  # snake_case francais peut avoir des majuscules contextuelles

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
